@@ -2,6 +2,8 @@
  <version>1.0</version>
  <dependencies>
   <dependency>profile-plone.app.dexterity:default</dependency>
+  <dependency>profile-plone.app.relationfield:default</dependency>
+  <dependency>profile-plone.formwidget.contenttree:default</dependency>
   <dependency>profile-Products.Poi:default</dependency>
   <dependency>profile-abstract.z3cform.usertokeninput:default</dependency>
   <dependency>profile-collective.js.jqueryui:default</dependency>
